namespace HotelBookingSystem.Domain.Interfaces;

public interface ILoggerService
{
    void Log(string message);
}