namespace HotelBookingSystem.Domain.Interfaces;

public interface IPriceCalculator
{
    decimal CalculatePrice();
}